--- a/sleuth/src/main/resources/application.yml
+++ b/sleuth/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 server:
-  port: 8083
+  port: 8081
+
 spring:
   application:
-    name: provider
+    name: sleuth
   zipkin:
     base-url: http://localhost:9411
     sender:
@@ -15,8 +16,5 @@ eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:8666/eureka/
-    healthcheck:
-      enabled: true
-  instance:
-    lease-renewal-interval-in-seconds: 5
-    lease-expiration-duration-in-seconds: 10
+
+#spring:
